--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -12,6 +12,16 @@
 .text-bold {
   font-weight: 600;
 }
+.font-weight-medium {
+  font-weight: 500 !important;
+}
+.font-weight-bold {
+  font-weight: 600 !important;
+}
+.font-weight-bolder {
+  font-weight: 700 !important;
+}
+
 .text-bolder {
   font-weight: 800;
 }
