--- a/src/scss/components/_empty-notice.scss
+++ b/src/scss/components/_empty-notice.scss
@@ -1,23 +1,23 @@
 .empty-notice {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: calc(100vh - 180px);
-	width: 100%;
-	max-width: 90vw;
-	flex-grow: 1;
-	flex-shrink: 1;
-	font-size: 1rem;
-	font-weight: 500;
-	opacity: 0.4;
-	text-align: center;
-	line-height: 130%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 180px);
+  width: 100%;
+  max-width: 90vw;
+  flex-grow: 1;
+  flex-shrink: 1;
+  font-size: 1em;
+  font-weight: 500;
+  opacity: 0.4;
+  text-align: center;
+  line-height: 130%;
 
-	margin: 0 auto;
-	color: var(--color-inverse-2);
-	&.sm {
-		min-height: 120px;
-		height: 120px;
-		font-size: 1.3rem;
-	}
+  margin: 0 auto;
+  color: var(--color-inverse-2);
+  &.sm {
+    min-height: 120px;
+    height: 120px;
+    font-size: 1.3em;
+  }
 }
