--- a/src/scss/components/_item-ball.scss
+++ b/src/scss/components/_item-ball.scss
@@ -48,9 +48,9 @@ $sizeLg: $trackerBallSize * 2;
 
   .ball-label {
     font-weight: 400;
-    font-size: 0.8rem !important;
+    font-size: 0.8em !important;
     margin-top: 10px;
-    line-height: 1rem;
+    line-height: 1em;
     width: 100%;
     text-align: center;
     text-overflow: ellipsis;
