--- a/src/scss/components/_memories.scss
+++ b/src/scss/components/_memories.scss
@@ -10,10 +10,10 @@
 
   .memories-log-header {
     padding: 4pt 0;
-    font-size: 0.7rem;
+    font-size: 0.7em;
     button {
       margin: 0 auto;
-      font-size: 0.9rem;
+      font-size: 0.9em;
       width: 75%;
       color: #fff;
       background-color: rgba(255, 255, 255, 0.1);
