--- a/src/scss/components/_mini-map.scss
+++ b/src/scss/components/_mini-map.scss
@@ -187,7 +187,7 @@ body.scrolling {
     border: solid 1px var(--color-faded-2);
 
     .zmdi {
-      font-size: 1.4rem;
+      font-size: 1.4em;
     }
     .btn {
       position: absolute;
