--- a/src/scss/components/_offline-notice.scss
+++ b/src/scss/components/_offline-notice.scss
@@ -1,7 +1,7 @@
 .offline-notice {
   background-color: $red;
   color: #fff;
-  font-size: 0.6rem;
+  font-size: 0.6em;
   padding: 2px 10px;
   position: fixed;
   bottom: 0;
