--- a/src/scss/components/_tap-icon-text.scss
+++ b/src/scss/components/_tap-icon-text.scss
@@ -2,10 +2,10 @@
   transition: all 0.2s ease-in-out;
   z-index: 10;
   position: relative;
-  font-size: 1.6rem !important;
+  font-size: 1.6em !important;
   color: var(--color-primary-bright);
   &.sm {
-    font-size: 1.5rem !important;
+    font-size: 1.5em !important;
   }
 
   svg {
@@ -23,9 +23,9 @@
 
 .tap-text {
   font-weight: 500 !important;
-  font-size: 1rem !important;
+  font-size: 1em !important;
   color: var(--color-primary-bright) !important;
   &.sm {
-    font-size: 1.5rem !important;
+    font-size: 1.5em !important;
   }
 }
