--- a/src/scss/components/_toolbar.scss
+++ b/src/scss/components/_toolbar.scss
@@ -4,7 +4,7 @@
   h1,
   h2,
   h3 {
-    font-size: 1.1rem;
+    font-size: 1.1em;
     margin-bottom: 0;
   }
 }
@@ -62,7 +62,7 @@
 .n-toolbar-grid.sm {
   min-height: 30px;
   height: 30px;
-  font-size: 0.9rem;
+  font-size: 0.9em;
 }
 
 .n-toolbar-grid .left {
@@ -88,9 +88,9 @@
 }
 .n-toolbar-grid .main h1,
 .n-toolbar-grid .main .title {
-  font-size: 1.1rem;
+  font-size: 1.1em;
   font-weight: bold;
-  line-height: 1.12rem;
+  line-height: 1.12em;
   margin: 2px;
   padding: 0;
   text-align: center;
