--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -194,7 +194,7 @@ hr.divider {
       flex-shrink: 1;
       align-items: center;
       justify-content: center;
-      font-size: 0.6rem;
+      font-size: 0.6em;
       text-transform: uppercase;
       font-weight: bold;
     }
