--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -34,7 +34,7 @@ $night-alt: #c3727c;
 $night: #311f62;
 
 $progress-height: 10px;
-$progress-font-size: 0.8rem;
+$progress-font-size: 0.8em;
 $progress-bg: var(--color-faded);
 $progress-border-radius: 10px;
 $progress-box-shadow: none;
