--- a/src/containers/tracker/editor/editor.scss
+++ b/src/containers/tracker/editor/editor.scss
@@ -51,7 +51,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          font-size: 0.9rem;
+          font-size: 0.9em;
           color: var(--color-solid-1);
           position: absolute;
           top: 0;
