--- a/src/scss/base/_animate.scss
+++ b/src/scss/base/_animate.scss
@@ -146,7 +146,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  border-radius: 1.2rem;
+  border-radius: 1.2em;
   box-shadow: var(--box-shadow-float);
 }
 
