--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -7,8 +7,8 @@ input[type="password"] {
   color: var(--color-inverse-2);
 
   border: none;
-  font-size: 1rem;
-  border-radius: 0.4rem;
+  font-size: 1em;
+  border-radius: 0.4em;
   padding: 6px;
   color: var(--color-inverse);
   &:focus {
@@ -38,7 +38,7 @@ input[type="password"] {
 .form-control,
 input.form-control,
 select.form-control {
-  border-radius: 0.4rem !important;
+  border-radius: 0.4em !important;
   background-color: var(--color-solid-half) !important;
   border: solid 1px var(--color-solid-1) !important;
   color: var(--color-inverse-2);
@@ -61,9 +61,9 @@ textarea.form-control {
   border-color: var(--color-solid-1);
   color: var(--color-inverse-2);
   border: none;
-  border-radius: 0.4rem;
+  border-radius: 0.4em;
   padding: 6px;
-  font-size: 0.7rem;
+  font-size: 0.7em;
   color: var(--color-inverse);
   &:focus {
     background-color: var(--color-input-background);
