--- a/src/scss/components/_badge.scss
+++ b/src/scss/components/_badge.scss
@@ -11,17 +11,17 @@
   align-items: center;
 
   &.badge-lg {
-    font-size: 1rem;
-    height: 2rem;
-    border-radius: 1rem;
-    line-height: 2rem;
+    font-size: 1em;
+    height: 2em;
+    border-radius: 1em;
+    line-height: 2em;
     padding: 0 18px;
   }
   &.badge-md {
-    font-size: 0.8rem;
-    height: 1.6rem;
-    border-radius: 0.8rem;
-    line-height: 1.6rem;
+    font-size: 0.8em;
+    height: 1.6em;
+    border-radius: 0.8em;
+    line-height: 1.6em;
     padding: 0 14px;
   }
 }
