--- a/src/scss/components/_board-tabs.scss
+++ b/src/scss/components/_board-tabs.scss
@@ -35,7 +35,7 @@
     align-items: center;
     flex-grow: 0;
     text-align: center;
-    font-size: 0.85rem;
+    font-size: 0.85em;
     transition: all 0.2s ease-in-out;
     &.selected {
       position: relative !important;
