--- a/src/scss/components/_share-image.scss
+++ b/src/scss/components/_share-image.scss
@@ -62,15 +62,15 @@
         min-width: calc(30% - 5px);
         height: auto;
         .label {
-          font-size: 1rem;
+          font-size: 1em;
           width: auto;
           line-height: 115%;
           margin-top: 6px;
         }
         .emoji {
-          font-size: 2.5rem;
+          font-size: 2.5em;
           @include media-breakpoint-up(md) {
-            font-size: 2.8rem;
+            font-size: 2.8em;
           }
         }
       }
@@ -101,11 +101,11 @@
 
     .day-date {
       font-weight: 700;
-      font-size: 0.9rem;
+      font-size: 0.9em;
     }
     .day-time {
       font-weight: 500;
-      font-size: 0.7rem;
+      font-size: 0.7em;
       opacity: 0.6;
     }
   }
@@ -115,7 +115,7 @@
     line-height: 110%;
     flex-grow: 1;
     padding: 0px 16px;
-    word-spacing: 0.09rem;
+    word-spacing: 0.09em;
     align-items: center;
     margin-top: -40px;
     .n-note-textualized {
@@ -165,7 +165,7 @@
       align-items: center;
       justify-content: center;
       .label {
-        font-size: 0.7rem;
+        font-size: 0.7em;
         line-height: 120%;
         width: 65px;
         white-space: nowrap;
@@ -174,7 +174,7 @@
         text-align: center;
       }
       .emoji {
-        font-size: 2rem;
+        font-size: 2em;
         line-height: 100%;
       }
       .value {
@@ -185,8 +185,8 @@
         font-weight: bold;
         // text-shadow: 0px 1px 1px var(--color-solid);
         color: var(--color-inverse);
-        margin-left: 1.1rem;
-        font-size: 0.6rem;
+        margin-left: 1.1em;
+        font-size: 0.6em;
         font-weight: 500;
         padding: 2px 5px;
         border-radius: 10px;
