--- a/src/scss/components/_tracker-input-modal.scss
+++ b/src/scss/components/_tracker-input-modal.scss
@@ -51,10 +51,10 @@
       .n-item {
         min-height: 30px;
 
-        font-size: 1rem;
+        font-size: 1em;
         padding: 4pt 8pt;
         .main .title {
-          font-size: 1rem;
+          font-size: 1em;
         }
       }
     }
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 1.6rem;
+    font-size: 1.6em;
     font-weight: 600;
   }
 }
