feat: variable font and button sizes

--- a/src/scss/components/_item-ball.scss
+++ b/src/scss/components/_item-ball.scss
@@ -18,6 +18,7 @@ $sizeLg: $trackerBallSize * 2;
   padding: 8px 8px;
   border: none;
   background: transparent;
+  outline: none;
   //
 
   .one-tap {
