--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,7 +28,7 @@ where a component doesn't exist, or isn't needed.
 // Components
 @import "./components/board-tabs";
 @import "./components/full-screen";
-@import "./components/btn";
+@import "./components/nbtn";
 @import "./components/mini-map";
 @import "./components/row";
 @import "./components/empty-notice";
