--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -32,51 +32,55 @@ html {
 }
 
 // Font Sizes
-
-body.font-size-sm {
+body.font-size-xs {
   --base-font-size: 16px;
   font-size: 16px;
 }
 
-body.font-size-md {
+body.font-size-sm {
   --base-font-size: 18px;
   font-size: 18px;
 }
 
-button {
-  font-size: var(--base-font-size);
+body.font-size-md {
+  --base-font-size: 20px;
+  font-size: 20px;
 }
 
 body.font-size-lg {
-  --base-font-size: 20px;
-  font-size: 20px;
+  --base-font-size: 22px;
+  font-size: 22px;
+}
+
+button {
+  // font-size: calc(var(--base-font-size) * 0.9);
 }
 
 // Theme Accents
 
 body.mint {
-  --color-primary-bright: #1fb182;
-  --color-primary: #1fb182;
+  --color-primary-bright: var(--color-mint-bright);
+  --color-primary: var(--color-mint);
 }
 
 body.teal {
-  --color-primary-bright: #10c4b5;
-  --color-primary: rgb(25, 156, 115);
+  --color-primary-bright: var(--color-teal-bright);
+  --color-primary: var(--color-teal);
 }
 
 body.purple {
-  --color-primary-bright: #ac0add;
-  --color-primary: #9409be;
+  --color-primary-bright: var(--color-purple-bright);
+  --color-primary: var(--color-purple);
 }
 
 body.orange {
-  --color-primary-bright: #ef8354;
-  --color-primary: #ef8354;
+  --color-primary-bright: var(--color-orange-bright);
+  --color-primary: var(--color-orange);
 }
 
 body.pink {
-  --color-primary-bright: #ff499e;
-  --color-primary: #ff499e;
+  --color-primary-bright: var(--color-pink-bright);
+  --color-primary: var(--color-pink);
 }
 
 body {
@@ -92,6 +96,7 @@ body {
   --color-inverse-1: #555;
   --color-inverse-2: #777;
   --color-inverse-3: #999;
+
   --color-solid: #fff;
   --color-white: #fff;
   --color-solid-half: #f8f8f8;
@@ -104,9 +109,26 @@ body {
   --color-primary-dark: #1a212a;
   --color-primary-faded: rgba(50, 159, 215, 0.45);
   --color-primary-bright: #319ed7;
+  --color-blue: #0a7bab;
   --color-orange: #ed9614;
   --color-green: #38a83f;
   --color-red: #e94151;
+
+  --color-mint-bright: #1fb182;
+  --color-mint: #1fb182;
+
+  --color-teal-bright: #10c4b5;
+  --color-teal: rgb(25, 156, 115);
+
+  --color-purple-bright: #ac0add;
+  --color-purple: #9409be;
+
+  --color-orange-bright: #ef8354;
+  --color-orange: #ef8354;
+
+  --color-pink-bright: #ff499e;
+  --color-pink: #ff499e;
+
   --color-tabs: var(--color-primary);
   --color-faded: rgba(0, 0, 0, 0.06);
   --color-faded-inverse: rgba(255, 255, 255, 0.06);
