--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -42,6 +42,7 @@
   display: flex !important;
   width: 100%;
   border: none;
+  outline: none;
 
   &.bg-light {
     background-color: var(--color-bg) !important;
