--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -79,6 +79,10 @@
   background-color: var(--color-mint-bright) !important;
 }
 
+.bg-bg {
+  background-color: var(--color-bg);
+}
+
 .bg-teal {
   background-color: var(--color-teal-bright) !important;
 }
