--- a/src/scss/components/_n-layout.scss
+++ b/src/scss/components/_n-layout.scss
@@ -1,7 +1,3 @@
-header.layout-header.scrolled {
-  box-shadow: var(--box-shadow-float);
-}
-
 .n-layout {
   position: fixed;
   display: flex;
@@ -24,9 +20,11 @@ header.layout-header.scrolled {
   // }
 
   .layout-header header,
-  .layout-header header .container {
+  .layout-header header .container,
+  .layout-header .n-toolbar {
     min-height: var(--header-height);
   }
+
   .layout-header header {
     display: flex;
     flex-direction: row;
@@ -40,7 +38,13 @@ header.layout-header.scrolled {
     flex-shrink: 0;
     z-index: 4;
     transition: all 0.2s ease-in-out;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
   }
+
+  header.layout-header.scrolled {
+    box-shadow: var(--box-shadow-float);
+  }
+
   main.layout-main {
     -webkit-overflow-scrolling: touch;
     overflow-y: auto;
