--- a/public/main.css
+++ b/public/main.css
@@ -5413,6 +5413,7 @@ button {
     pointer-events: none; }
 
 .nbtn {
+  --button-base-size: var(--base-font-size);
   display: inline-flex;
   flex-direction: row;
   align-items: center;
@@ -5424,25 +5425,30 @@ button {
   position: relative;
   transition: background 0.2s ease-in-out;
   overflow: hidden;
-  font-size: var(--base-font-size);
+  font-size: var(--button-base-size);
   color: var(--color-inverse);
   height: 40px;
+  line-height: 100%;
   padding-left: 16px;
   padding-right: 16px;
-  box-shadow: var(--box-shadow-tight); }
+  box-shadow: var(--box-shadow-tight);
+  white-space: pre; }
+  @media (max-width: 349.98px) {
+    .nbtn {
+      --button-base-size: calc(var(--base-font-size) * 0.9); } }
 
 .nbtn:focus {
   outline: rgba(155, 155, 155, 0.2) !important; }
 
 .nbtn-sm {
-  font-size: calc(var(--base-font-size) * 0.85);
+  font-size: calc(var(--button-base-size) * 0.85);
   height: 30px;
   padding-left: 12px;
   padding-right: 12px;
   border-radius: 6px; }
 
 .nbtn-xs {
-  font-size: calc(var(--base-font-size) * 0.75);
+  font-size: calc(var(--button-base-size) * 0.75);
   height: 24px;
   padding-left: 8px;
   padding-right: 8px;
@@ -5453,10 +5459,10 @@ button {
   opacity: 0.5; }
 
 .nbtn-md {
-  font-size: var(--base-font-size); }
+  font-size: var(--button-base-size); }
 
 .nbtn-lg {
-  font-size: calc(var(--base-font-size) * 1.2);
+  font-size: calc(var(--button-base-size) * 1.2);
   min-height: 50px; }
   .nbtn-lg.nbtn-rounded {
     border-radius: 10px; }
