--- a/src/scss/components/_nbtn.scss
+++ b/src/scss/components/_nbtn.scss
@@ -12,14 +12,21 @@
 }
 
 .nbtn {
+  --button-base-size: var(--base-font-size);
+  @include media-breakpoint-down(xs) {
+    --button-base-size: calc(var(--base-font-size) * 0.9);
+  }
+
   @include nbtn(30px, 8px, 4px);
   overflow: hidden;
-  font-size: var(--base-font-size);
+  font-size: var(--button-base-size);
   color: var(--color-inverse);
   height: 40px;
+  line-height: 100%;
   padding-left: 16px;
   padding-right: 16px;
   box-shadow: var(--box-shadow-tight);
+  white-space: pre;
 }
 
 .nbtn:focus {
@@ -27,7 +34,7 @@
 }
 
 .nbtn-sm {
-  font-size: calc(var(--base-font-size) * 0.85);
+  font-size: calc(var(--button-base-size) * 0.85);
   height: 30px;
   padding-left: 12px;
   padding-right: 12px;
@@ -35,7 +42,7 @@
 }
 
 .nbtn-xs {
-  font-size: calc(var(--base-font-size) * 0.75);
+  font-size: calc(var(--button-base-size) * 0.75);
   height: 24px;
   padding-left: 8px;
   padding-right: 8px;
@@ -48,11 +55,11 @@
 }
 
 .nbtn-md {
-  font-size: var(--base-font-size);
+  font-size: var(--button-base-size);
 }
 
 .nbtn-lg {
-  font-size: calc(var(--base-font-size) * 1.2);
+  font-size: calc(var(--button-base-size) * 1.2);
   min-height: 50px;
   &.nbtn-rounded {
     border-radius: 10px;
