--- a/src/scss/components/_n-log-item.scss
+++ b/src/scss/components/_n-log-item.scss
@@ -47,6 +47,13 @@
     white-space: nowrap;
     display: inline-block;
   }
+
+  main {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+  }
+
   &.truncate {
     .label {
       max-width: calc(100% - 1px);
