--- a/public/main.css
+++ b/public/main.css
@@ -5413,6 +5413,7 @@ button {
     pointer-events: none; }
 
 .nbtn {
+  transition: all 0.2s ease-in-out;
   --button-base-size: var(--base-font-size);
   display: inline-flex;
   flex-direction: row;
@@ -5431,11 +5432,12 @@ button {
   line-height: 100%;
   padding-left: 16px;
   padding-right: 16px;
-  box-shadow: var(--box-shadow-tight);
-  white-space: pre; }
+  box-shadow: var(--box-shadow-tight); }
   @media (max-width: 349.98px) {
     .nbtn {
       --button-base-size: calc(var(--base-font-size) * 0.9); } }
+  .nbtn:active {
+    transform: scale(0.95); }
 
 .nbtn:focus {
   outline: rgba(155, 155, 155, 0.2) !important; }
