feat: ability to see and delete individual logs from the offline queue

--- a/src/scss/base/_flex.scss
+++ b/src/scss/base/_flex.scss
@@ -2,6 +2,16 @@
   justify-content: stretch;
 }
 
+.items-center {
+  display: flex;
+  align-items: center;
+}
+.justify-center {
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
