--- a/public/main.css
+++ b/public/main.css
@@ -5113,6 +5113,15 @@ select {
 .justify-content-stretch {
   justify-content: stretch; }
 
+.items-center {
+  display: flex;
+  align-items: center; }
+
+.justify-center {
+  display: flex;
+  justify-items: center;
+  justify-content: center; }
+
 .flex-grow {
   flex-grow: 1; }
 
