feat: better picker list design / editing

--- a/public/main.css
+++ b/public/main.css
@@ -5122,6 +5122,10 @@ select {
   justify-items: center;
   justify-content: center; }
 
+.flex {
+  display: flex;
+  flex-direction: row; }
+
 .flex-grow {
   flex-grow: 1; }
 
