feat: improved popmenu experience across entire app

--- a/public/main.css
+++ b/public/main.css
@@ -5432,6 +5432,10 @@ button {
     transform: scale(1.3);
     pointer-events: none; }
 
+.nbtn-desc {
+  padding-top: 12px;
+  padding-bottom: 12px; }
+
 .nbtn {
   transition: all 0.2s ease-in-out;
   --button-base-size: calc(var(--base-font-size) * 1);
@@ -7156,6 +7160,18 @@ TODO: Organize main into components or containers.
 .sticky {
   position: -webkit-sticky;
   position: sticky; }
+
+.rounded {
+  border-radius: 6px; }
+
+.rounded-md {
+  border-radius: 8px; }
+
+.rounded-lg {
+  border-radius: 12px !important; }
+
+.rounded-xl {
+  border-radius: 14px !important; }
 
 .bottom-0 {
   bottom: env(safe-area-inset-bottom); }
